adding 2020 papers and correcting typos

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -156,11 +156,13 @@
 	title = {Riemannian classification for {SSVEP} based {BCI}: offline versus online implementations},
 	copyright = {All rights reserved},
 	isbn = {978-1-351-23195-4},
-	url = {https://www.routledge.com/BrainComputer-Interfaces-Handbook-Technological-and-Theoretical-Advances/Nam-Nijholt-Lotte/p/book/9781351231954},
+	url = {https://hal.uvsq.fr/hal-01710089},
+	abstract = {This chapter focus on the different implementations of brain-computer interface (BCI) based on Steady-State Visually Evoked Potentials (SSVEPs). In offline BCI, feature extraction and the classification are performed at the end of the session, when all trials are available. Whereas, in on-line settings, they are performed several times during each trial, usually for each available epoch recorded by the electroencephalogram (EEG) device, enabling real-time and asynchronous BCI. A recent successful approach in feature extraction and signal processing for BCI is Riemannian geometry , which deals with covariance matrices. They capture the degree of correlation between several random variables, that is how the brain signals change relatively to each other. These techniques have demonstrated their benefit on several occasions, leading to winning algorithms in international competitions and to state-of-the-art results on renowned BCI benchmarks. After reviewing some of the most robust approaches in feature extraction for SSVEP, this chapter will introduce newer tools based on Riemannian geometry. With an application to SSVEP, this article shows through a comparison how Riemannian geometry allows one to easily define offline and online implementations that have better accuracies than state of the art.},
 	booktitle = {Brain {Computer} {Interfaces} {Handbook}: {Technological} and {Theoretical} {Advances}},
 	publisher = {CRC Press},
 	author = {Chevallier, Sylvain and Kalunga, Emmanuel K. and Barthélemy, Quentin and Yger, Florian},
 	year = {2018},
+	note = {https://www.routledge.com/BrainComputer-Interfaces-Handbook-Technological-and-Theoretical-Advances/Nam-Nijholt-Lotte/p/book/9781351231954},
 	file = {Chevallier et al. - 2018 - Riemannian classification for SSVEP based BCI off.pdf:/Users/sylchev/bib/Zotero/storage/A7XKTTUW/Chevallier et al. - 2018 - Riemannian classification for SSVEP based BCI off.pdf:application/pdf;Nam-Nijholt-Lotte-Chapitre 19-only-18.pdf:/Users/sylchev/recherche/publications/livres/Nam-Nijholt-Lotte-Chapitre 19-only-18.pdf:application/pdf}
 }
 
@@ -183,10 +185,10 @@
 	url = {https://hal.archives-ouvertes.fr/hal-01352059},
 	doi = {10.1109/AFRCON.2013.6757776},
 	abstract = {Brain Computer Interfaces (BCI) rely on brain waves signal, such as electro-encephalogram (EEG) recording, to endow a disabled user with non-muscular communication. Given the very low signal-to-noise ratio of EEG, a signal enhancement phase is crucial for ensuring decent performances in BCI systems. Several methods have been proposed for EEG signal enhancement, such as Independent Component Analysis, Common Spatial Pattern, and Principal Component Analysis. We show that Canonical Correlation Analysis (CCA), initially introduced to SSVEP-based BCI as a feature extraction method, is a good candidate for such preprocessing state. Evaluation is performed on a recording from 5 subjects during a BCI task based on Steady-State Visual Evoked Potentials (SSVEP). The authors demonstrate that CCA significantly improves classification performances in SSVEP-based BCIs.},
-	booktitle = {{AFRICON}, 2013},
+	booktitle = {{AFRICON}},
 	author = {Kalunga, Emmanuel K. and Djouani, Karim and Hamam, Yskandar and Chevallier, Sylvain and Monacelli, Eric},
 	year = {2013},
-	keywords = {brain computer interfaces, brain-computer interfaces, Electroencephalography, medical signal processing, visual evoked potentials, Visualization, Ash, BCI performances, brain waves signal, canonical correlation analysis, classification performances, common spatial pattern, Correlation, disabled user, EEG signal enhancement phase, electroencephalogram recording, feature extraction, feature extraction method, independent component analysis, nonmuscular communication, preprocessing state, principal component analysis, signal classification, signal denoising, SSVEP enhancement, steady-state visual evoked potentials, Support vector machines, Training, very low signal-to-noise ratio},
+	keywords = {Ash, BCI performances, brain computer interfaces, brain waves signal, brain-computer interfaces, canonical correlation analysis, classification performances, common spatial pattern, Correlation, disabled user, EEG signal enhancement phase, electroencephalogram recording, Electroencephalography, feature extraction, feature extraction method, independent component analysis, medical signal processing, nonmuscular communication, preprocessing state, principal component analysis, signal classification, signal denoising, SSVEP enhancement, steady-state visual evoked potentials, Support vector machines, Training, very low signal-to-noise ratio, visual evoked potentials, Visualization},
 	pages = {1--5},
 	file = {Kalunga et al. - 2013 - SSVEP enhancement based on Canonical Correlation A.pdf:/Users/sylchev/bib/Zotero/storage/NXSVATNB/Kalunga et al. - 2013 - SSVEP enhancement based on Canonical Correlation A.pdf:application/pdf;SSVEP enhancement based on cca to improve BCI performances.pdf:/Users/sylchev/recherche/publications/confs/africon13/SSVEP enhancement based on cca to improve BCI performances.pdf:application/pdf}
 }
@@ -201,13 +203,13 @@
 	file = {Kalunga et al. - 2015 - Using Riemannian geometry for SSVEP-based Brain Co.pdf:/Users/sylchev/bib/Zotero/storage/HHMKCJHC/Kalunga et al. - 2015 - Using Riemannian geometry for SSVEP-based Brain Co.pdf:application/pdf;Kalunga-Chevallier-Barthelemy-1501.03227v3.pdf:/Users/sylchev/recherche/publications/rapport/arxiv-Riemannian geometry for SSVEP BCI/Kalunga-Chevallier-Barthelemy-1501.03227v3.pdf:application/pdf}
 }
 
-@incollection{kalunga_euclidean_2015,
+@inproceedings{kalunga_euclidean_2015,
 	series = {Lecture {Notes} in {Computer} {Science}},
 	title = {From {Euclidean} to {Riemannian} {Means}: {Information} {Geometry} for {SSVEP} {Classification}},
+	volume = {9389},
 	copyright = {All rights reserved},
 	shorttitle = {From {Euclidean} to {Riemannian} {Means}},
 	url = {https://hal.archives-ouvertes.fr/hal-01351753},
-	number = {9389},
 	booktitle = {Geometric {Science} of {Information}},
 	publisher = {Springer International Publishing},
 	author = {Kalunga, Emmanuel K. and Chevallier, Sylvain and Barthélemy, Quentin and Djouani, Karim and Hamam, Yskandar and Monacelli, Eric},
@@ -223,6 +225,7 @@
 	copyright = {All rights reserved},
 	url = {https://hal.archives-ouvertes.fr/hal-01351623},
 	doi = {https://dx.doi.org/10.1016/j.neucom.2016.01.007},
+	abstract = {Challenges for the next generation of Brain Computer Interfaces (BCI) are to mitigate the common sources of variability (electronic, electrical, biological) and to develop online and adaptive systems following the evolution of the subject׳s brain waves. Studying electroencephalographic (EEG) signals from their associated covariance matrices allows the construction of a representation which is invariant to extrinsic perturbations. As covariance matrices should be estimated, this paper first presents a thorough study of all estimators conducted on real EEG recording. Working in Euclidean space with covariance matrices is known to be error-prone, one might take advantage of algorithmic advances in Riemannian geometry and matrix manifold to implement methods for Symmetric Positive-Definite (SPD) matrices. Nonetheless, existing classification algorithms in Riemannian spaces are designed for offline analysis. We propose a novel algorithm for online and asynchronous processing of brain signals, borrowing principles from semi-unsupervised approaches and following a dynamic stopping scheme to provide a prediction as soon as possible. The assessment is conducted on real EEG recording: this is the first study on Steady-State Visually Evoked Potential (SSVEP) experimentations to exploit online classification based on Riemannian geometry. The proposed online algorithm is evaluated and compared with state-of-the-art SSVEP methods, which are based on Canonical Correlation Analysis (CCA). It is shown to improve both the classification accuracy and the information transfer rate in the online and asynchronous setup.},
 	urldate = {2016-03-09},
 	journal = {Neurocomputing},
 	author = {Kalunga, Emmanuel K. and Chevallier, Sylvain and Barthélemy, Quentin and Djouani, Karim and Monacelli, Eric and Hamam, Yskandar},
@@ -250,6 +253,7 @@
 	title = {Inductive {Means} and {Sequences} {Applied} to {Online} {Classification} of {EEG}},
 	copyright = {All rights reserved},
 	url = {https://hal.uvsq.fr/hal-01711499},
+	abstract = {The translation of brain activity into user command, through Brain-Computer Interfaces (BCI), is a very active topic in machine learning and signal processing. As commercial applications and out-of-the-lab solutions are proposed, there is an increased pressure to provide online algorithms and real-time implementations. Electroencephalography (EEG) systems offer lightweight and wearable solutions, at the expense of signal quality. Approaches based on covariance matrices have demonstrated good robustness to noise and provide a suitable representation for classification tasks, relying on advances in Riemannian geometry. We propose to equip the minimum distance to mean (MDM) classifier with a new family of means, based on the inductive mean, for block-online classification tasks and to embed the inductive mean in an incremental learning algorithm for online classification of EEG.},
 	booktitle = {International {Conference} on {Geometric} {Science} of {Information}},
 	publisher = {Springer},
 	author = {Massart, Estelle M and Chevallier, Sylvain},
@@ -274,6 +278,7 @@
 	title = {Transfer learning for {SSVEP}-based {BCI} using {Riemannian} similarities between users},
 	copyright = {All rights reserved},
 	url = {https://hal.uvsq.fr/hal-01911092},
+	abstract = {Brain-Computer Interfaces (BCI) face a great challenge: how to harness the wide variability of brain signals from a user to another. The most visible problem is the lack of a sound framework to capture the specificity of a user brain waves. A first attempt to leverage this issue is to design user-specific spatial filters, carefully adjusted with a lengthy calibration phase. A second, more recent, opening is the systematic study of brain signals through their covariance, in an appropriate space from a geometric point of view. Riemannian geometry allows to efficiently characterize the variability of inter-subject EEG, even with noisy or scarce data. This contribution is the first attempt for SSVEP-based BCI to make the most of the available data from a user, relying on Riemannian geometry to estimate the similarity with a multi-user dataset. The proposed method is built in the framework of transfer learning and borrows the notion of composite mean to partition the space. This method is evaluated on 12 subjects performing an SSVEP task for the control of an exoskeleton arm and the results show the contribution of Riemannian geometry and of the user-specific composite mean, whereas there is only a few data available for a subject.},
 	booktitle = {2018 26th {European} {Signal} {Processing} {Conference} ({EUSIPCO})},
 	publisher = {IEEE},
 	author = {Kalunga, Emmanuel K and Chevallier, Sylvain and Barthélemy, Quentin},
@@ -483,7 +488,7 @@
 	abstract = {Rehabilitation exoskeletons require a control interface for the direct transfer of mechanical power and exchange of information in order to assist the patient in his/her movements. By using co-contraction indexes (CCI), it is possible to accurately characterize human movement and joint stability. But when dealing with human movement disorders, no existing index allows to achieve neuro-motor control with bio-kinematic sensors. Thus, we propose a neuro-motor interactive method for lower-body exoskeleton control. A novel dynamic index called neuro-motor index (NMI) is introduced to estimate the relation between muscular co-contraction derived from electromyography signals (EMG) and joint angles. To estimate the correlation in the state space and enhance the precision of the NMI, we describe an estimation method relying on a two-way analysis of canonical correlation (CCA). A thorough assessment is presented, by conducting two studies on control subjects and on patients with abnormal gait in a medical environment. i) An offline study on control patients showed that NMI captures the complex variation induced by changing walking speed more accurately than CCI, ii) an online study, applied on successive gait cycles of patients with abnormal walk indicates that the existing CCI have a low accuracy related with joint angles while it is significantly higher with NMI.},
 	number = {6},
 	journal = {International Journal of Modeling and Optimization},
-	author = {Charafeddine, JInan and Chevallier, Sylvain and Alfayad, Samer and Khalil, Mohamad and Pradon, Didier},
+	author = {Charafeddine, Jinan and Chevallier, Sylvain and Alfayad, Samer and Khalil, Mohamad and Pradon, Didier},
 	year = {2019},
 	pages = {322--328},
 	file = {Charafeddine et al. - 2019 - Biokinematic Control Strategy for Rehabilitation E.pdf:/Users/sylchev/bib/Zotero/storage/TGQ8CSNM/Charafeddine et al. - 2019 - Biokinematic Control Strategy for Rehabilitation E.pdf:application/pdf;Charafeddine-Biokinematic control for Exoskeleton.pdf:/Users/sylchev/recherche/publications/journaux/exo-ijmo/Charafeddine-Biokinematic control for Exoskeleton.pdf:application/pdf}
@@ -510,7 +515,7 @@
 	doi = {https://doi.org/10.1109/ICABME47164.2019.8940263},
 	abstract = {Assisting users and restoring human locomotion for patients with lower limb spasticity is a challenging task. Studies on gait disorders are rare where there is an important variability in movement parameters between patients. Those patients could benefit the most from rehabilitation and assistive mechatronic devices; there is no generic controlling scheme or any dynamical gain indicator. This contribution introduces a bio-kinematic index which is called Neuro-motor index (NMI), based on electromyographic (EMG) and joint angles measurements. NMI is derived from the nonlinear regression with a combination of two co-contraction indices (CCI), which allows addressing the variability of walking situations. This new index is evaluated on patients with cerebral palsy and a stroke. Then, the estimation error was calculated in comparison with the other co-contraction indices. This estimation shows that this index has the highest signification of joint angles prediction. Thus it can be suitable in adaptive rehabilitation control for spasticity cases.},
 	booktitle = {International {Conference} on {Advances} in {Biomedical} {Engineering} ({ICABME})},
-	author = {Charafeddine, JInan and Chevallier, Sylvain and Khalil, Mohamad and Pradon, Didier and Alfayad, Samer},
+	author = {Charafeddine, Jinan and Chevallier, Sylvain and Khalil, Mohamad and Pradon, Didier and Alfayad, Samer},
 	year = {2019},
 	file = {Charafeddine et al. - 2019 - Neuromotor Strategy of Gait Rehabilitation for Low.pdf:/Users/sylchev/bib/Zotero/storage/DQYZL26W/Charafeddine et al. - 2019 - Neuromotor Strategy of Gait Rehabilitation for Low.pdf:application/pdf;Neuromotor Strategy of Gait Rehabilitation for Lower-Limb Spasticity.pdf:/Users/sylchev/recherche/publications/confs/19-icabme/Neuromotor Strategy of Gait Rehabilitation for Lower-Limb Spasticity.pdf:application/pdf}
 }
@@ -571,12 +576,13 @@
 	url = {https://hal.archives-ouvertes.fr/hal-01351738v1},
 	abstract = {In this introduction and review—like in the book which follows—we explore the hypothesis that adaptive growth is a means of producing brain-like machines. The emulation of neural development can incorporate desirable characteristics of natural neural systems into engineered designs. The introduction begins with a review of neural development and neural models. Next, artificial development— the use of a developmentally-inspired stage in engineering design—is introduced. Several strategies for performing this " meta-design " for artificial neural systems are reviewed. This work is divided into three main categories: bio-inspired representations ; developmental systems; and epigenetic simulations. Several specific network biases and their benefits to neural network design are identified in these contexts. In particular, several recent studies show a strong synergy, sometimes interchange-ability, between developmental and epigenetic processes—a topic that has remained largely under-explored in the literature.},
 	booktitle = {Growing {Adaptive} {Machines}},
+	publisher = {Springer},
 	author = {Kowaliw, Taras and Bredeche, Nicolas and Chevallier, Sylvain and Doursat, René},
 	year = {2014},
 	file = {Kowaliw et al. - 2014 - Artificial Neurogenesis An Introduction and Selec.pdf:/Users/sylchev/bib/Zotero/storage/3RB6W4NN/Kowaliw et al. - 2014 - Artificial Neurogenesis An Introduction and Selec.pdf:application/pdf;Kowaliw-Bredeche-Doursat-Chevallier-GAM_Chapter1-14.pdf:/Users/sylchev/recherche/publications/livres/Kowaliw-Bredeche-Doursat-Chevallier-GAM_Chapter1-14.pdf:application/pdf}
 }
 
-@unpublished{chevallier_implementation_2009,
+@phdthesis{chevallier_implementation_2009,
 	address = {Université Paris-Sud},
 	type = {Thèse},
 	title = {Implementation of a preattentional system with spiking neurons},
@@ -588,7 +594,7 @@
 	file = {Chevallier - 2009 - Implementation of a preattentional system with spi.pdf:/Users/sylchev/bib/Zotero/storage/REHDZ5XX/Chevallier - 2009 - Implementation of a preattentional system with spi.pdf:application/pdf;these.pdf:/Users/sylchev/recherche/publications/manuscrit/these.pdf:application/pdf}
 }
 
-@unpublished{chevallier_signaux_2019,
+@phdthesis{chevallier_signaux_2019,
 	address = {Université Paris-Saclay},
 	type = {{HDR}},
 	title = {Des signaux cérébraux aux activités cognitives, approches géométriques et apprentissage statistique},
@@ -616,7 +622,57 @@ Toutes ces approches sont développées avec des outils libres pour une science 
 	url = {https://hal.archives-ouvertes.fr/hal-2614100},
 	doi = {doi: 10.1109/ICASSP40776.2020.9053464},
 	abstract = {Building upon advances on optimal transport and anomaly detection, we propose a generalization of an unsupervised and automatic method for detection of significant deviation from reference signals. Unlike most existing approaches for anomaly detection, our method is built on a non-parametric framework exploiting the optimal transportation to estimate deviation from an observed distribution. We described the theoretical background of our method and demonstrate its effectiveness on two datasets: an industrial predictive maintenance task based on audio recording and a detection of anomalous breathing relying on brain signals. In this type of problem, no negative or faulty samples are seen during training and the objective is to detect any abnormal sample without raising false alarm. The proposed approach outperforms all state-of-the-art methods for anomaly detection on the two considered datasets.},
+	booktitle = {{IEEE} {International} {Conference} on {Acoustics}, {Speech} and {Signal} {Processing} ({ICASSP})},
 	author = {Alaoui-Belghiti, Amina and Chevallier, Sylvain and Monacelli, Eric and Bao, Guillaume and Azabou, Eric},
 	month = may,
 	year = {2020}
+}
+
+@article{marlats_smrtheta_2020,
+	title = {{SMR}/{Theta} {Neurofeedback} {Training} {Improves} {Cognitive} {Performance} and {EEG} {Activity} in {Elderly} {With} {Mild} {Cognitive} {Impairment}: {A} {Pilot} {Study}},
+	volume = {12},
+	url = {https://www.frontiersin.org/article/10.3389/fnagi.2020.00147},
+	doi = {10.3389/fnagi.2020.00147},
+	abstract = {Background: Neurofeedback (NF) training, as a method of self-regulation of brain activity, may be beneficial in elderly patients with mild cognitive impairment (MCI). In this pilot study, we investigated whether a sensorimotor (SMR)/theta NF training could improve cognitive performance and brain electrical activity in elderly patients with MCI.
+
+Methods: Twenty elderly patients with MCI were assigned to 20 consecutive sessions of sensorimotor (SMR)/theta NF training, during 10 weeks, on a basis of two sessions each week. Neuropsychological assessments and questionnaires, as well as electroencephalogram (EEG), were performed and compared between baseline (T0), after the last NF training session at 10 weeks (T1), and 1-month follow-up (T2).
+
+Results: Repeated measures ANOVA revealed that from baseline to post-intervention, participants showed significant improvement in the Montreal cognitive assessment (MoCa, F = 4.78; p = 0.012), the delayed recall of the Rey auditory verbal learning test (RAVLT, F = 3.675; p = 0.032), the Forward digit span (F = 13.82; p {\textless} 0.0001), the Anxiety Goldberg Scale (F = 4.54; p = 0.015), the Wechsler Adult Intelligence Score–Fourth Edition (WAIS-IV; F = 24.75; p {\textless} 0.0001), and the Mac Nair score (F = 4.47; p = 0.016). EEG theta power (F = 4.44; p = 0.016) and alpha power (F = 3.84; p = 0.027) during eyes-closed resting-state significantly increased after the NF training and showed sustained improvement at a 1-month follow-up.
+
+Conclusion: Our results suggest that NF training could be effective to reduce cognitive deficits in elderly patients with MCI and improve their EEG activity. If these findings are confirmed by randomized controlled studies with larger samples of patients, NF could be seen as a useful non-invasive, non-pharmacological tool for preventing further decline, rehabilitation of cognitive function in the elderly.
+
+Clinical Trial Registration: This pilot study was a preliminary step before the trial registered in www.ClinicalTrials.gov, under the number of NCT03526692.},
+	journal = {Frontiers in Aging Neuroscience},
+	author = {Marlats, Fabienne and Bao, Guillaume and Chevallier, Sylvain and Boubaya, Marouane and Djabelkhir-Jemmi, Leila and Wu, Ya-Huei and Lenoir, Hermine and Rigaud, Anne-Sophie and Azabou, Eric},
+	year = {2020},
+	pages = {147}
+}
+
+@article{azabou_randomized_2020,
+	title = {Randomized {Controlled} {Study} {Evaluating} {Efficiency} of {Low} {Intensity} {Transcranial} {Direct} {Current} {Stimulation} ({tDCS}) for {Dyspnea} {Relief} in {Mechanically} {Ventilated} {COVID}-19 {Patients} in {ICU}: {The} {tDCS}-{DYSP}-{COVID} {Protocol}},
+	volume = {7},
+	issn = {2296-858X},
+	url = {https://www.frontiersin.org/article/10.3389/fmed.2020.00372},
+	doi = {10.3389/fmed.2020.00372},
+	abstract = {The severe respiratory distress syndrome linked to the new coronavirus disease (COVID-19) includes unbearable dyspneic suffering which contributes to the deterioration of the prognosis of patients in intensive care unit (ICU). Patients are put on mechanical ventilation to reduce respiratory suffering and preserve life. Despite this mechanical ventilation, most patients continue to suffer from dyspnea. Dyspnea is a major source of suffering in intensive care and one of the main factors that affect the prognosis of patients. The development of innovative methods for its management, especially non-drug management is more than necessary. In recent years, numerous studies have shown that transcranial direct current stimulation (tDCS) could modulate the perception of acute or chronic pain. In the other hand, it has been shown that the brain zones activated during pain and dyspnea are close and/or superimposed, suggesting that brain structures involved in the integration of aversive emotional component are shared by these two complex sensory experiences. Therefore, it can be hypothesized that stimulation by tDCS with regard to the areas which, in the case of pain have activated one or more of these brain structures, may also have an effect on dyspnea. In addition, our team recently demonstrated that the application of tDCS on the primary cortical motor area can modulate the excitability of the respiratory neurological pathways. Indeed, tDCS in anodal or cathodal modality reduced the excitability of the diaphragmatic cortico-spinal pathways in healthy subjects. We therefore hypothesized that tDCS could relieve dyspnea in COVID-19 patients under mechanical ventilation in ICU. This study was designed to evaluate effects of two modalities of tDCS (anodal and cathodal) vs. placebo, on the relief of dyspnea in COVID-19 patients requiring mechanical ventilation in ICU.},
+	journal = {Frontiers in Medicine},
+	author = {Azabou, Eric and Bao, Guillaume and Heming, Nicholas and Bounab, Rania and Moine, Pierre and Chevallier, Sylvain and Chevret, Sylvie and Resche-Rigon, Matthieu and Siami, Shidaps and Sharshar, Tarek and Lofaso, Frederic and Annane, Djillali},
+	year = {2020},
+	pages = {372}
+}
+
+@inproceedings{yger_geodesically-convex_2020,
+	title = {Geodesically-convex optimization for averaging partially observed covariance matrices},
+	url = {http://proceedings.mlr.press/v129/yger20a.html},
+	abstract = {Symmetric positive definite (SPD) matrices permeates numerous scientific disciplines, including machine learning, optimization, and signal processing. Equipped with a Riemannian geometry, the space of SPD matrices benefits from compelling properties and its derived Riemannian mean is now the gold standard in some applications, eg brain-computer interfaces (BCI). This paper addresses the problem of averaging covariance matrices with missing variables. This situation often occurs with inexpensive or unreliable sensors, or when artifact-suppression techniques remove corrupted sensors leading to rank deficient matrices, hindering the use of the Riemannian geometry in covariance-based approaches. An alternate but questionable method consists in removing the matrices with missing variables, thus reducing the training set size. We address those limitations and propose a new formulation grounded in geodesic convexity. Our approach is evaluated on generated datasets with a controlled number of missing variables and a known baseline, demonstrating the robustness of the proposed estimator. The practical interest of this approach is assessed on real BCI datasets. Our results show that the proposed average is more robust and better suited for classification than classical data imputation methods.},
+	language = {en},
+	urldate = {2020-11-24},
+	booktitle = {Asian {Conference} on {Machine} {Learning}},
+	publisher = {PMLR},
+	author = {Yger, Florian and Chevallier, Sylvain and Barthélemy, Quentin and Sra, Suvrit},
+	month = sep,
+	year = {2020},
+	note = {ISSN: 2640-3498},
+	pages = {417--432},
+	file = {Full Text PDF:/Users/sylchev/bib/Zotero/storage/7VTM2MWV/Yger et al. - 2020 - Geodesically-convex optimization for averaging par.pdf:application/pdf;Snapshot:/Users/sylchev/bib/Zotero/storage/UZBSDDSY/yger20a.html:text/html}
 }
